--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.6.1",
     "router": "^1.3.7",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
